--- a/src/css/home.css
+++ b/src/css/home.css
@@ -59,11 +59,6 @@
     width: 100%;
   }
   
-  @media screen and (min-width:870px) {
-    .fourthSecImg{
-      width: 60vh;
-    }
-  }
   @media screen and (min-width:950px){
     .secondSecCont{
       width: 950px;
@@ -90,5 +85,11 @@
     .heroButton{
       background-color: black;
       color: white;
+    }
+  }
+
+  @media screen and (min-width:1180px) {
+    .fourthSecImg{
+      width: 60vh;
     }
   }
